# fits

./: .pre-commit-config.yaml  README.md  pyproject.toml
fits/: __init__.py  fits.py  header.py
